intermediate-code-generation/sysy.output
Terminals unused in grammar

    RIGHT_OP
    LEFT_OP


State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: CompUnit Decl
    2         | CompUnit FuncDef
    3         | Decl
    4         | FuncDef

    5 Decl: ConstDecl
    6     | VarDecl

    7 ConstDecl: CONST BType ConstDefList ';'

    8 ConstDefList: ConstDefList ',' ConstDef
    9             | ConstDef

   10 BType: INT
   11      | FLOAT
   12      | VOID

   13 ConstDef: IDENTIFIER ConstExpList '=' ConstInitVal

   14 ConstExpList: ConstExpList '[' ConstExp ']'
   15             | ε

   16 ConstInitVal: ConstExp
   17             | '{' ConstInitValList '}'
   18             | '{' '}'

   19 ConstInitValList: ConstInitValList ',' ConstInitVal
   20                 | ConstInitVal

   21 VarDecl: BType VarDefList ';'

   22 VarDefList: VarDefList ',' VarDef
   23           | VarDef

   24 VarDef: IDENTIFIER ConstExpList
   25       | IDENTIFIER ConstExpList '=' InitVal

   26 InitVal: Exp
   27        | '{' InitValList '}'
   28        | '{' '}'

   29 InitValList: InitValList ',' InitVal
   30            | InitVal

   31 FuncDef: BType IDENTIFIER '(' FuncFParams ')' Block
   32        | BType IDENTIFIER '(' ')' Block

   33 FuncFParams: FuncFParams ',' FuncFParam
   34            | FuncFParam

   35 FuncFParam: BType IDENTIFIER
   36           | BType IDENTIFIER '[' ']' ConstExpList

   37 Block: '{' BlockItemList '}'
   38      | '{' '}'

   39 BlockItemList: BlockItemList BlockItem
   40              | BlockItem

   41 BlockItem: Decl
   42          | Stmt

   43 Stmt: LVal '=' Exp ';'
   44     | ExpOrEmpty ';'
   45     | Block
   46     | IF '(' Cond ')' Stmt
   47     | IF '(' Cond ')' Stmt ELSE Stmt
   48     | WHILE '(' Cond ')' Stmt
   49     | DO Stmt WHILE '(' Cond ')' ';'
   50     | FOR '(' ForStmt ';' CondOrEmpty ';' ForStmt ')' Stmt
   51     | BREAK ';'
   52     | CONTINUE ';'
   53     | RETURN ExpOrEmpty ';'

   54 ExpOrEmpty: Exp
   55           | ε

   56 CondOrEmpty: Cond
   57            | ε

   58 ForStmt: ForStmt ',' LVal '=' Exp
   59        | LVal '=' Exp

   60 Exp: AddExp

   61 Cond: LOrExp

   62 LVal: IDENTIFIER ExpList

   63 ExpList: ExpList '[' Exp ']'
   64        | ε

   65 PrimaryExp: '(' Exp ')'
   66           | LVal
   67           | INT_CONST
   68           | FLOAT_CONST

   69 UnaryExp: PrimaryExp
   70         | IDENTIFIER '(' FuncRParams ')'
   71         | IDENTIFIER '(' ')'
   72         | INC_OP UnaryExp
   73         | DEC_OP UnaryExp
   74         | '+' UnaryExp
   75         | '-' UnaryExp
   76         | '!' UnaryExp

   77 FuncRParams: FuncRParams ',' Exp
   78            | Exp

   79 MulExp: UnaryExp
   80       | MulExp '*' UnaryExp
   81       | MulExp '/' UnaryExp
   82       | MulExp '%' UnaryExp

   83 AddExp: MulExp
   84       | AddExp '+' MulExp
   85       | AddExp '-' MulExp

   86 RelExp: AddExp
   87       | RelExp '<' AddExp
   88       | RelExp '>' AddExp
   89       | RelExp LE_OP AddExp
   90       | RelExp GE_OP AddExp

   91 EqExp: RelExp
   92      | EqExp EQ_OP RelExp
   93      | EqExp NE_OP RelExp

   94 LAndExp: EqExp
   95        | LAndExp AND_OP EqExp

   96 LOrExp: LAndExp
   97       | LOrExp OR_OP LAndExp

   98 ConstExp: AddExp


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 76
    '%' (37) 82
    '(' (40) 31 32 46 47 48 49 50 65 70 71
    ')' (41) 31 32 46 47 48 49 50 65 70 71
    '*' (42) 80
    '+' (43) 74 84
    ',' (44) 8 19 22 29 33 58 77
    '-' (45) 75 85
    '/' (47) 81
    ';' (59) 7 21 43 44 49 50 51 52 53
    '<' (60) 87
    '=' (61) 13 25 43 58 59
    '>' (62) 88
    '[' (91) 14 36 63
    ']' (93) 14 36 63
    '{' (123) 17 18 27 28 37 38
    '}' (125) 17 18 27 28 37 38
    error (256)
    IDENTIFIER <id> (258) 13 24 25 31 32 35 36 62 70 71
    INT_CONST <intval> (259) 67
    FLOAT_CONST <fval> (260) 68
    CONST (261) 7
    INT (262) 10
    FLOAT (263) 11
    VOID (264) 12
    IF (265) 46 47
    ELSE (266) 47
    WHILE (267) 48 49
    DO (268) 49
    FOR (269) 50
    BREAK (270) 51
    CONTINUE (271) 52
    RETURN (272) 53
    LE_OP (273) 89
    GE_OP (274) 90
    EQ_OP (275) 92
    NE_OP (276) 93
    AND_OP (277) 95
    OR_OP (278) 97
    INC_OP (279) 72
    DEC_OP (280) 73
    RIGHT_OP (281)
    LEFT_OP (282)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    CompUnit <ast> (46)
        on left: 1 2 3 4
        on right: 0 1 2
    Decl <ast> (47)
        on left: 5 6
        on right: 1 3 41
    ConstDecl <ast> (48)
        on left: 7
        on right: 5
    ConstDefList <list> (49)
        on left: 8 9
        on right: 7 8
    BType <ast> (50)
        on left: 10 11 12
        on right: 7 21 31 32 35 36
    ConstDef <ast> (51)
        on left: 13
        on right: 8 9
    ConstExpList <ast> (52)
        on left: 14 15
        on right: 13 14 24 25 36
    ConstInitVal <ast> (53)
        on left: 16 17 18
        on right: 13 19 20
    ConstInitValList <list> (54)
        on left: 19 20
        on right: 17 19
    VarDecl <ast> (55)
        on left: 21
        on right: 6
    VarDefList <list> (56)
        on left: 22 23
        on right: 21 22
    VarDef <ast> (57)
        on left: 24 25
        on right: 22 23
    InitVal <ast> (58)
        on left: 26 27 28
        on right: 25 29 30
    InitValList <list> (59)
        on left: 29 30
        on right: 27 29
    FuncDef <ast> (60)
        on left: 31 32
        on right: 2 4
    FuncFParams <list> (61)
        on left: 33 34
        on right: 31 33
    FuncFParam <ast> (62)
        on left: 35 36
        on right: 33 34
    Block <ast> (63)
        on left: 37 38
        on right: 31 32 45
    BlockItemList <list> (64)
        on left: 39 40
        on right: 37 39
    BlockItem <ast> (65)
        on left: 41 42
        on right: 39 40
    Stmt <ast> (66)
        on left: 43 44 45 46 47 48 49 50 51 52 53
        on right: 42 46 47 48 49 50
    ExpOrEmpty <ast> (67)
        on left: 54 55
        on right: 44 53
    CondOrEmpty <ast> (68)
        on left: 56 57
        on right: 50
    ForStmt <ast> (69)
        on left: 58 59
        on right: 50 58
    Exp <ast> (70)
        on left: 60
        on right: 26 43 54 58 59 63 65 77 78
    Cond <ast> (71)
        on left: 61
        on right: 46 47 48 49 56
    LVal <ast> (72)
        on left: 62
        on right: 43 58 59 66
    ExpList <ast> (73)
        on left: 63 64
        on right: 62 63
    PrimaryExp <ast> (74)
        on left: 65 66 67 68
        on right: 69
    UnaryExp <ast> (75)
        on left: 69 70 71 72 73 74 75 76
        on right: 72 73 74 75 76 79 80 81 82
    FuncRParams <list> (76)
        on left: 77 78
        on right: 70 77
    MulExp <ast> (77)
        on left: 79 80 81 82
        on right: 80 81 82 83 84 85
    AddExp <ast> (78)
        on left: 83 84 85
        on right: 60 84 85 86 87 88 89 90 98
    RelExp <ast> (79)
        on left: 86 87 88 89 90
        on right: 87 88 89 90 91 92 93
    EqExp <ast> (80)
        on left: 91 92 93
        on right: 92 93 94 95
    LAndExp <ast> (81)
        on left: 94 95
        on right: 95 96 97
    LOrExp <ast> (82)
        on left: 96 97
        on right: 61 97
    ConstExp <ast> (83)
        on left: 98
        on right: 14 16


State 0

    0 $accept: • CompUnit $end
    1 CompUnit: • CompUnit Decl
    2         | • CompUnit FuncDef
    3         | • Decl
    4         | • FuncDef
    5 Decl: • ConstDecl
    6     | • VarDecl
    7 ConstDecl: • CONST BType ConstDefList ';'
   10 BType: • INT
   11      | • FLOAT
   12      | • VOID
   21 VarDecl: • BType VarDefList ';'
   31 FuncDef: • BType IDENTIFIER '(' FuncFParams ')' Block
   32        | • BType IDENTIFIER '(' ')' Block

    CONST  shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    CompUnit   go to state 5
    Decl       go to state 6
    ConstDecl  go to state 7
    BType      go to state 8
    VarDecl    go to state 9
    FuncDef    go to state 10


State 1

    7 ConstDecl: CONST • BType ConstDefList ';'
   10 BType: • INT
   11      | • FLOAT
   12      | • VOID

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    BType  go to state 11


State 2

   10 BType: INT •

    $default  reduce using rule 10 (BType)


State 3

   11 BType: FLOAT •

    $default  reduce using rule 11 (BType)


State 4

   12 BType: VOID •

    $default  reduce using rule 12 (BType)


State 5

    0 $accept: CompUnit • $end
    1 CompUnit: CompUnit • Decl
    2         | CompUnit • FuncDef
    5 Decl: • ConstDecl
    6     | • VarDecl
    7 ConstDecl: • CONST BType ConstDefList ';'
   10 BType: • INT
   11      | • FLOAT
   12      | • VOID
   21 VarDecl: • BType VarDefList ';'
   31 FuncDef: • BType IDENTIFIER '(' FuncFParams ')' Block
   32        | • BType IDENTIFIER '(' ')' Block

    $end   shift, and go to state 12
    CONST  shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    Decl       go to state 13
    ConstDecl  go to state 7
    BType      go to state 8
    VarDecl    go to state 9
    FuncDef    go to state 14


State 6

    3 CompUnit: Decl •

    $default  reduce using rule 3 (CompUnit)


State 7

    5 Decl: ConstDecl •

    $default  reduce using rule 5 (Decl)


State 8

   21 VarDecl: BType • VarDefList ';'
   22 VarDefList: • VarDefList ',' VarDef
   23           | • VarDef
   24 VarDef: • IDENTIFIER ConstExpList
   25       | • IDENTIFIER ConstExpList '=' InitVal
   31 FuncDef: BType • IDENTIFIER '(' FuncFParams ')' Block
   32        | BType • IDENTIFIER '(' ')' Block

    IDENTIFIER  shift, and go to state 15

    VarDefList  go to state 16
    VarDef      go to state 17


State 9

    6 Decl: VarDecl •

    $default  reduce using rule 6 (Decl)


State 10

    4 CompUnit: FuncDef •

    $default  reduce using rule 4 (CompUnit)


State 11

    7 ConstDecl: CONST BType • ConstDefList ';'
    8 ConstDefList: • ConstDefList ',' ConstDef
    9             | • ConstDef
   13 ConstDef: • IDENTIFIER ConstExpList '=' ConstInitVal

    IDENTIFIER  shift, and go to state 18

    ConstDefList  go to state 19
    ConstDef      go to state 20


State 12

    0 $accept: CompUnit $end •

    $default  accept


State 13

    1 CompUnit: CompUnit Decl •

    $default  reduce using rule 1 (CompUnit)


State 14

    2 CompUnit: CompUnit FuncDef •

    $default  reduce using rule 2 (CompUnit)


State 15

   14 ConstExpList: • ConstExpList '[' ConstExp ']'
   15             | ε •  [';', ',', '=', '[']
   24 VarDef: IDENTIFIER • ConstExpList
   25       | IDENTIFIER • ConstExpList '=' InitVal
   31 FuncDef: BType IDENTIFIER • '(' FuncFParams ')' Block
   32        | BType IDENTIFIER • '(' ')' Block

    '('  shift, and go to state 21

    $default  reduce using rule 15 (ConstExpList)

    ConstExpList  go to state 22


State 16

   21 VarDecl: BType VarDefList • ';'
   22 VarDefList: VarDefList • ',' VarDef

    ';'  shift, and go to state 23
    ','  shift, and go to state 24


State 17

   23 VarDefList: VarDef •

    $default  reduce using rule 23 (VarDefList)


State 18

   13 ConstDef: IDENTIFIER • ConstExpList '=' ConstInitVal
   14 ConstExpList: • ConstExpList '[' ConstExp ']'
   15             | ε •

    $default  reduce using rule 15 (ConstExpList)

    ConstExpList  go to state 25


State 19

    7 ConstDecl: CONST BType ConstDefList • ';'
    8 ConstDefList: ConstDefList • ',' ConstDef

    ';'  shift, and go to state 26
    ','  shift, and go to state 27


State 20

    9 ConstDefList: ConstDef •

    $default  reduce using rule 9 (ConstDefList)


State 21

   10 BType: • INT
   11      | • FLOAT
   12      | • VOID
   31 FuncDef: BType IDENTIFIER '(' • FuncFParams ')' Block
   32        | BType IDENTIFIER '(' • ')' Block
   33 FuncFParams: • FuncFParams ',' FuncFParam
   34            | • FuncFParam
   35 FuncFParam: • BType IDENTIFIER
   36           | • BType IDENTIFIER '[' ']' ConstExpList

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4
    ')'    shift, and go to state 28

    BType        go to state 29
    FuncFParams  go to state 30
    FuncFParam   go to state 31


State 22

   14 ConstExpList: ConstExpList • '[' ConstExp ']'
   24 VarDef: IDENTIFIER ConstExpList •  [';', ',']
   25       | IDENTIFIER ConstExpList • '=' InitVal

    '='  shift, and go to state 32
    '['  shift, and go to state 33

    $default  reduce using rule 24 (VarDef)


State 23

   21 VarDecl: BType VarDefList ';' •

    $default  reduce using rule 21 (VarDecl)


State 24

   22 VarDefList: VarDefList ',' • VarDef
   24 VarDef: • IDENTIFIER ConstExpList
   25       | • IDENTIFIER ConstExpList '=' InitVal

    IDENTIFIER  shift, and go to state 34

    VarDef  go to state 35


State 25

   13 ConstDef: IDENTIFIER ConstExpList • '=' ConstInitVal
   14 ConstExpList: ConstExpList • '[' ConstExp ']'

    '='  shift, and go to state 36
    '['  shift, and go to state 33


State 26

    7 ConstDecl: CONST BType ConstDefList ';' •

    $default  reduce using rule 7 (ConstDecl)


State 27

    8 ConstDefList: ConstDefList ',' • ConstDef
   13 ConstDef: • IDENTIFIER ConstExpList '=' ConstInitVal

    IDENTIFIER  shift, and go to state 18

    ConstDef  go to state 37


State 28

   32 FuncDef: BType IDENTIFIER '(' ')' • Block
   37 Block: • '{' BlockItemList '}'
   38      | • '{' '}'

    '{'  shift, and go to state 38

    Block  go to state 39


State 29

   35 FuncFParam: BType • IDENTIFIER
   36           | BType • IDENTIFIER '[' ']' ConstExpList

    IDENTIFIER  shift, and go to state 40


State 30

   31 FuncDef: BType IDENTIFIER '(' FuncFParams • ')' Block
   33 FuncFParams: FuncFParams • ',' FuncFParam

    ','  shift, and go to state 41
    ')'  shift, and go to state 42


State 31

   34 FuncFParams: FuncFParam •

    $default  reduce using rule 34 (FuncFParams)


State 32

   25 VarDef: IDENTIFIER ConstExpList '=' • InitVal
   26 InitVal: • Exp
   27        | • '{' InitValList '}'
   28        | • '{' '}'
   60 Exp: • AddExp
   62 LVal: • IDENTIFIER ExpList
   65 PrimaryExp: • '(' Exp ')'
   66           | • LVal
   67           | • INT_CONST
   68           | • FLOAT_CONST
   69 UnaryExp: • PrimaryExp
   70         | • IDENTIFIER '(' FuncRParams ')'
   71         | • IDENTIFIER '(' ')'
   72         | • INC_OP UnaryExp
   73         | • DEC_OP UnaryExp
   74         | • '+' UnaryExp
   75         | • '-' UnaryExp
   76         | • '!' UnaryExp
   79 MulExp: • UnaryExp
   80       | • MulExp '*' UnaryExp
   81       | • MulExp '/' UnaryExp
   82       | • MulExp '%' UnaryExp
   83 AddExp: • MulExp
   84       | • AddExp '+' MulExp
   85       | • AddExp '-' MulExp

    IDENTIFIER   shift, and go to state 43
    INT_CONST    shift, and go to state 44
    FLOAT_CONST  shift, and go to state 45
    INC_OP       shift, and go to state 46
    DEC_OP       shift, and go to state 47
    '{'          shift, and go to state 48
    '('          shift, and go to state 49
    '+'          shift, and go to state 50
    '-'          shift, and go to state 51
    '!'          shift, and go to state 52

    InitVal     go to state 53
    Exp         go to state 54
    LVal        go to state 55
    PrimaryExp  go to state 56
    UnaryExp    go to state 57
    MulExp      go to state 58
    AddExp      go to state 59


State 33

   14 ConstExpList: ConstExpList '[' • ConstExp ']'
   62 LVal: • IDENTIFIER ExpList
   65 PrimaryExp: • '(' Exp ')'
   66           | • LVal
   67           | • INT_CONST
   68           | • FLOAT_CONST
   69 UnaryExp: • PrimaryExp
   70         | • IDENTIFIER '(' FuncRParams ')'
   71         | • IDENTIFIER '(' ')'
   72         | • INC_OP UnaryExp
   73         | • DEC_OP UnaryExp
   74         | • '+' UnaryExp
   75         | • '-' UnaryExp
   76         | • '!' UnaryExp
   79 MulExp: • UnaryExp
   80       | • MulExp '*' UnaryExp
   81       | • MulExp '/' UnaryExp
   82       | • MulExp '%' UnaryExp
   83 AddExp: • MulExp
   84       | • AddExp '+' MulExp
   85       | • AddExp '-' MulExp
   98 ConstExp: • AddExp

    IDENTIFIER   shift, and go to state 43
    INT_CONST    shift, and go to state 44
    FLOAT_CONST  shift, and go to state 45
    INC_OP       shift, and go to state 46
    DEC_OP       shift, and go to state 47
    '('          shift, and go to state 49
    '+'          shift, and go to state 50
    '-'          shift, and go to state 51
    '!'          shift, and go to state 52

    LVal        go to state 55
    PrimaryExp  go to state 56
    UnaryExp    go to state 57
    MulExp      go to state 58
    AddExp      go to state 60
    ConstExp    go to state 61


State 34

   14 ConstExpList: • ConstExpList '[' ConstExp ']'
   15             | ε •
   24 VarDef: IDENTIFIER • ConstExpList
   25       | IDENTIFIER • ConstExpList '=' InitVal

    $default  reduce using rule 15 (ConstExpList)

    ConstExpList  go to state 22


State 35

   22 VarDefList: VarDefList ',' VarDef •

    $default  reduce using rule 22 (VarDefList)


State 36

   13 ConstDef: IDENTIFIER ConstExpList '=' • ConstInitVal
   16 ConstInitVal: • ConstExp
   17             | • '{' ConstInitValList '}'
   18             | • '{' '}'
   62 LVal: • IDENTIFIER ExpList
   65 PrimaryExp: • '(' Exp ')'
   66           | • LVal
   67           | • INT_CONST
   68           | • FLOAT_CONST
   69 UnaryExp: • PrimaryExp
   70         | • IDENTIFIER '(' FuncRParams ')'
   71         | • IDENTIFIER '(' ')'
   72         | • INC_OP UnaryExp
   73         | • DEC_OP UnaryExp
   74         | • '+' UnaryExp
   75         | • '-' UnaryExp
   76         | • '!' UnaryExp
   79 MulExp: • UnaryExp
   80       | • MulExp '*' UnaryExp
   81       | • MulExp '/' UnaryExp
   82       | • MulExp '%' UnaryExp
   83 AddExp: • MulExp
   84       | • AddExp '+' MulExp
   85       | • AddExp '-' MulExp
   98 ConstExp: • AddExp

    IDENTIFIER   shift, and go to state 43
    INT_CONST    shift, and go to state 44
    FLOAT_CONST  shift, and go to state 45
    INC_OP       shift, and go to state 46
    DEC_OP       shift, and go to state 47
    '{'          shift, and go to state 62
    '('          shift, and go to state 49
    '+'          shift, and go to state 50
    '-'          shift, and go to state 51
    '!'          shift, and go to state 52

    ConstInitVal  go to state 63
    LVal          go to state 55
    PrimaryExp    go to state 56
    UnaryExp      go to state 57
    MulExp        go to state 58
    AddExp        go to state 60
    ConstExp      go to state 64


State 37

    8 ConstDefList: ConstDefList ',' ConstDef •

    $default  reduce using rule 8 (ConstDefList)


State 38
